terraform/aws/modules/provisioner/namespaces.tf
resource "kubernetes_namespace" "network" {
  metadata {
    name = "network"
  }
}
